syntax = "proto3";

package greet;
option go_package = "greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetAllRequest {
  Greeting greeting = 1;
}

message GreetAllResponse {
  string result = 1;
}

service GreetService{
  // unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // server stream
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse);

  // client stream
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

  // bidirectional stream
  rpc GreetAll(stream GreetAllRequest) returns (stream GreetAllResponse) {};
}
